# hipper

./: .mailmap  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md
cmake/: hipperConfig.cmake.in
doc/: runtime.md
include/hipper/: hipper_cub.h  hipper_runtime.h
tests/: CMakeLists.txt  test_cub.cu  test_hipper.cc  test_hipper.h  test_kernel.cu
tests/cuda/: CMakeLists.txt
tests/hip/: CMakeLists.txt
tools/: FindCatch2.cmake  Findhipper.cmake  hipperConfig.cmake.in
